# ordvec

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  Makefile  README.md  RELEASING.md  SECURITY.md  THREAT_MODEL.md  cliff.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
benchmarks/: README.md  crt_seam_oracle_results.md  rank_modes_results.txt
docs/: ALTERNATIVES_CONSIDERED.md  FOLLOWUP_BODY_KERNEL_TIE_BREAK.md  INDEX_PROVENANCE.md  PERSISTED_FORMAT.md  RANK_MODES.md  bindings-safety.md  c-api.md  compatibility-policy.md  determinism.md
examples/: beir_ordvec.rs  bench_rank.rs  density_collapse.rs  twonn_id.rs
fuzz/: Cargo.toml
ordvec-ffi/: Cargo.toml  cbindgen.toml
ordvec-go/: ordvec.go  ordvec_test.go
ordvec-manifest/: Cargo.toml  README.md
ordvec-manifest-python/: README.md
ordvec-manifest/src/: lib.rs  main.rs  sqlite.rs
ordvec-manifest/tests/: manifest.rs
ordvec-python/: README.md  pyproject.toml  requirements-dev.txt
src/: bitmap.rs  bucket_code.rs  const_weight_bitmap.rs  contingency.rs  fastscan.rs  format.rs  lib.rs  multi_bucket.rs  quant.rs  quant_kernels.rs  rank.rs  rank_io.rs  sign_bitmap.rs  util.rs
tests/: alloc_free.rs  determinism_contract.rs  persistence_compat.rs  redteam_alpha.rs  redteam_beta.rs  redteam_delta.rs  redteam_gamma.rs  release_environment_settings.sh  release_publish_invariants.py  release_publish_invariants.sh  release_pypi_canonical_dist.py  release_pypi_canonical_dist_tests.py  release_signed_release_invariants.sh  verify_index_authority_test.py
(+70 files in other folders)
